tooling/nargo_cli/tests/snapshots/execution_success/regression_7451/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u8) {
    // Safety: comment added by `nargo expand`
    let predicate: bool = unsafe { return_true() };
    let tmp: u8 = if predicate { 255 } else { 0 };
    let y: u8 = tmp & x;
    assert(y == 1);
}

unconstrained fn return_true() -> bool {
    true
}
