tooling/nargo_cli/tests/snapshots/execution_success/regression_7451/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/7VUUW7DIAwla6aVdZWmTds5cIBi/vLRi5AmnKNHb1CN6qK0Hy19UoStkGe/B3EjzmjmZ1XEDeVrinPe06qeQozrhRocdespaBiXVjtjJtdNoCGozg9olbHDDgHBoh071HpCg84P3ikPRk8QrdeRyBJXW/R5D3nPP62S1rfC876SVlnUrcmPs1NyQV/F/rUU13euMr/K/C/yX30Qz/544edact10779YvKV4e+f7V/Y+n62RYnke1OCfAb83+k/YkA/fhVbunajYy0Zc/sX2WF+vw/OsSFgR/zvTy9Gy93z/H+WfhQd5BvUP9hldgKhDDDaMozmEn4I/IZ9R8ukEoeRRaCwGAAA=",
  "debug_symbols": "nZDLCoMwEEX/ZdZZaK0P8iulSIyjBEISYlIo4r93FNPqolC6msedcwfuDD12cWyVGewE/DZD55XWamy1lSIoa2g7LwzS2AaPSCs46EQ54dEE4CZqzeAhdNyOJifMVoPwpGYM0PRUyXBQGtduYR86+47W+c421zdc/kznZbHjeZX9w9dV4pszf6dJSOVPeUEO/MLgArxYVlOvRKdxT3KIRh6CDU+XlBS981ZiHz2upptGb14=",
  "file_map": {
    "50": {
      "source": "fn main(x: u8) {\n    // Safety: test code\n    let predicate = unsafe { return_true() };\n    let tmp: u8 = if predicate { 0xff } else { 0 };\n\n    let y = tmp & x;\n    assert_eq(y, 1);\n}\n\nunconstrained fn return_true() -> bool {\n    true\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "return_true"
  ]
}
